--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html><head><link rel="stylesheet" href="css/basic.css" />
+<meta charset="utf-8">
 <meta name="x5-page-mode" content="app">
 <script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script type="text/javascript" src="js/basic.js"></script>
