--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head><link rel="stylesheet" href="css/basic.css" />
-<meta charset="utf-8">
 <meta name="x5-page-mode" content="app">
+<meta charset="utf-8">
 <script type="text/javascript" src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script type="text/javascript" src="js/basic.js"></script>
 </head><body id="container"><div><div id="print" class="board"><div style="position:absolute;left:0%; top:20%;" id="hand-zone"><img src="img/m1.gif" class="card" /><img src="img/m1.gif" class="card" /><img src="img/m1.gif" class="card" /><img src="img/m2.gif" class="card" /><img src="img/m2.gif" class="card" /><img src="img/m2.gif" class="card" /><img src="img/m3.gif" class="card" /><img src="img/m3.gif" class="card" /><img src="img/m3.gif" class="card" /><img src="img/m4.gif" class="card" /><img src="img/m4.gif" class="card" /><img src="img/m4.gif" class="card" /><img src="img/m5.gif" class="card" /></div>
@@ -24,3 +24,4 @@
     </div>
     <img class="back" src="img/pai.gif" id="covertemp" hidden="true"/>
     <div class="picked picked-wrapper" hidden="true" id="picked-template"><img class="picked" src="img/m1.gif" /><span class="delImg">+</span></div><img src="img/m1.gif" hidden="true" id="hand-template" class="card" /></div></div></body></html>
+    <div class="message" onclick="disappear()"></div>
