--- a/index.html
+++ b/index.html
@@ -25,3 +25,6 @@
     <img class="back" src="img/pai.gif" id="covertemp" hidden="true"/>
     <div class="picked picked-wrapper" hidden="true" id="picked-template"><img class="picked" src="img/m1.gif" /><span class="delImg">+</span></div><img src="img/m1.gif" hidden="true" id="hand-template" class="card" /></div></div></body></html>
     <div class="message" onclick="disappear()"></div>
+    <input class="button bonus green" onclick="paybox()" type="button" class="bonus" value="打赏"/>
+
+
